--- a/profle.html
+++ b/profle.html
@@ -15,7 +15,7 @@
         <div class="navigation">
             <a href="index.html">Home</a>
             <a href="profle.html">Our Profile</a>
-            <a href="#">Message Us</a>
+            <a href="index.html#message-us">Message Us</a>
         </div>
     </nav>
 
